Junit5 parameter: Introduce serialization alternative to XStream